# adventOfCode

./: .gitignore  CMakeLists.txt  README.md
CMake/: CompilerWarnings.cmake
src/: CMakeLists.txt  aoc.cpp  main.cpp
src/inc/: aoc.h
test/: CMakeLists.txt  dayOneTestInput.txt  test_dayOne.cpp
